# esp32-test-stubs

./: .gitignore  pyproject.toml
stubs/micropython-v1_17-docstubs/: pyproject.toml  stubinfo.md
