[tool.poetry]
name = "micropython-library-test-stubs"
version = "1.17.3"
description = "Sample project for PEP-561 distribution testing"
authors = ["josverl <josverl@users.noreply.github.com>"]
license = "MIT"
readme = "stubinfo.md"
homepage = "https://github.com/josverl/esp32-test-stubs"

classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
]

packages = [
    # { include = "*.py?",  from = "."},
    { include = "**/*.py*" },
]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
